--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/FirstLevel.FirstLevel
+EditorStartupMap=/Game/Levels/FirstLevel.FirstLevel
+GlobalDefaultGameMode=/Game/Sources/Character/GM_BaseGameMode.GM_BaseGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
