Completed asset testing and initial setup for controls and camera. Created a placeholder version of the first level. Started organizing project structure.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,6 +50,16 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.MotionBlur=False
+r.AllowOcclusionQueries=False
+r.TextureStreaming=True
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
+r.Lumen.TraceMeshSDFs=1
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.Nanite.ProjectEnabled=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.Bloom=False
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
